Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69911

qtactiveqt does not compile with 5.12 qtbase

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.0 Alpha
    • 5.12
    • ActiveX Support
    • None
    • Windows
    • 4bbc782fc70f30e8b1530e87c85a8f453deb051d b0c0d79ee42879586525349ead5ada574e6e0a65

    Description

      dev branch of qtactiveqt does not compile with latest qtbase/dev:

      D:\dev\qt\dev\src\qtactiveqt\src\activeqt\container\qaxbase.cpp(3034): error C2338: QtDBus meta-object generator should generate the same version as moc
      

      This is because of commit 1c623bc6d1c0a7c in qtbase, that changed the QMetaObject binary format.

      Attachments

        For Gerrit Dashboard: QTBUG-69911
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes