Adapt to QMetaObjectPrivate changes in qtbase

Commit 1c623bc6d1c0a7c in qtbase bumped
QMetaObjectPrivate::OutputRevision, which caused qtactiveqt builds
to fail.

Task-number: QTBUG-69911
Change-Id: I40be892d8c80fdc4706ae176bbafb302fdd00921
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>